사이트관리 링크 추가

--- a/sources/css/style.less
+++ b/sources/css/style.less
@@ -5136,6 +5136,25 @@ body {
                 color: #555;
                 margin: 5px 0 0 0;
             }
+
+            p {
+                .zero;
+                    margin: 8px 0 0 0;
+                    font-size: 12px;
+                    font-style: normal;
+                    color: #555;
+            }
+
+            p.site {
+                margin: 0;
+
+                a {
+                    font-size: 12px;
+                    color: #555;
+                    margin: 10px 0 0 0;
+                    .block;
+                }
+            }
         }
     }
 }
