--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -4119,3 +4119,19 @@ body footer#footer .container p.copyright {
   color: #555;
   margin: 5px 0 0 0;
 }
+body footer#footer .container p {
+  font-size: 0;
+  margin: 8px 0 0 0;
+  font-size: 12px;
+  font-style: normal;
+  color: #555;
+}
+body footer#footer .container p.site {
+  margin: 0;
+}
+body footer#footer .container p.site a {
+  font-size: 12px;
+  color: #555;
+  margin: 10px 0 0 0;
+  display: block;
+}
