메인 이미지 링크 추가

--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -255,7 +255,7 @@ body header#header .container {
 body header#header .container h1 {
   position: absolute;
   left: -19px;
-  background: url("/wp/assets/source/images/logo.svg") no-repeat center / auto 100%;
+  background: url("../images/logo.svg") no-repeat center / auto 100%;
   margin: 0;
   padding: 0;
   font-size: 0;
@@ -831,7 +831,7 @@ body div#content {
 }
 body div#content .container {
   width: 100%;
-  background: url("/wp/assets/source/images/bg.jpg") no-repeat center / cover;
+  background: url("../images/bg.jpg") no-repeat center / cover;
 }
 body div#content .container .main_wrap {
   width: 980px;
@@ -861,6 +861,10 @@ body div#content .container .main_wrap section.main_content ul.main_img li {
   width: 100%;
   height: 540px;
   float: left;
+}
+body div#content .container .main_wrap section.main_content ul.main_img li a {
+  display: block;
+  padding: 0;
 }
 body div#content .container .main_wrap section.main_content ul {
   list-style: none;
@@ -899,7 +903,7 @@ body div#content .container .main_wrap section.main_content ul li a {
   padding: 20px 0 0 20px;
 }
 body div#content .container .main_wrap section.main_content ul li.c1 {
-  background: url("/wp/assets/source/images/content1.jpg") no-repeat center / cover;
+  background: url("../images/content1.jpg") no-repeat center / cover;
   width: 374px;
   height: 264px;
   margin-bottom: 12px;
@@ -913,7 +917,7 @@ body div#content .container .main_wrap section.main_content ul li.c1 span {
   line-height: 22px;
 }
 body div#content .container .main_wrap section.main_content ul li.c2 {
-  background: url("/wp/assets/source/images/content2.jpg") no-repeat center / cover;
+  background: url("../images/content2.jpg") no-repeat center / cover;
   width: 180px;
   height: 264px;
   margin-right: 12px;
@@ -929,7 +933,7 @@ body div#content .container .main_wrap section.main_content ul li.c2 h5 span {
   margin-bottom: 10px;
 }
 body div#content .container .main_wrap section.main_content ul li.c3 {
-  background: url("/wp/assets/source/images/content3.jpg") no-repeat center / cover;
+  background: url("../images/content3.jpg") no-repeat center / cover;
   width: 180px;
   height: 264px;
   float: left;
@@ -951,7 +955,7 @@ body div#content .container .main_wrap section.notice_wrap {
 }
 body div#content .container .main_wrap section.notice_wrap a.info {
   display: block;
-  background: url("/wp/assets/source/images/info.jpg") no-repeat center / cover;
+  background: url("../images/info.jpg") no-repeat center / cover;
   width: 227px;
   height: 212px;
   padding: 40px 0 0 26px;
@@ -1051,7 +1055,7 @@ body div#content .container .main_wrap section.notice_wrap ul.notice li.veiw div
   vertical-align: top;
   font-size: 0;
   margin: 2px 0 0 2px;
-  background: url("/wp/assets/source/images/new.png") no-repeat center / cover;
+  background: url("../images/new.png") no-repeat center / cover;
   width: 13px;
   height: 12px;
 }
@@ -1232,19 +1236,19 @@ body div#content .sub_container h2.sub_title.other {
 body div#content .sub_container h2.sub_title p {
   width: 980px;
   margin: 0 auto;
-  background: url("/wp/assets/source/images/sub01.jpg") no-repeat center / cover;
+  background: url("../images/sub01.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub02 {
-  background: url("/wp/assets/source/images/sub02.jpg") no-repeat center / cover;
+  background: url("../images/sub02.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub03 {
-  background: url("/wp/assets/source/images/sub03.jpg") no-repeat center / cover;
+  background: url("../images/sub03.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub04 {
-  background: url("/wp/assets/source/images/sub04.jpg") no-repeat center / cover;
+  background: url("../images/sub04.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub05 {
-  background: url("/wp/assets/source/images/sub05.jpg") no-repeat center / cover;
+  background: url("../images/sub05.jpg") no-repeat center / cover;
 }
 body div#content .sub_container div.hello {
   position: relative;
@@ -1273,7 +1277,7 @@ body div#content .sub_container div.hello ul {
   width: 980px;
   height: 840px;
   margin: 0 auto 60px auto;
-  background: url("/wp/assets/source/images/hello.jpg") no-repeat center / cover;
+  background: url("../images/hello.jpg") no-repeat center / cover;
   padding: 50px;
 }
 body div#content .sub_container div.hello ul li {
@@ -1549,7 +1553,7 @@ body div#content .sub_container section.contents div.tab_contents div.con03 ul.c
   display: block;
   width: 18px;
   height: 31.48px;
-  background: url("/wp/assets/source/images/arrow3.svg") no-repeat center / cover;
+  background: url("../images/arrow3.svg") no-repeat center / cover;
   position: absolute;
   top: 38px;
 }
@@ -1722,7 +1726,7 @@ body div#content .sub_container section.contents div.tab_contents#tab01 div.con0
   display: block;
   width: 24px;
   height: 41.97px;
-  background: url("/wp/assets/source/images/arrow2.svg") no-repeat center / cover;
+  background: url("../images/arrow2.svg") no-repeat center / cover;
   position: absolute;
   top: 130px;
   left: -46px;
@@ -1770,7 +1774,7 @@ body div#content .sub_container section.contents div.tab_contents#tab02 div.con0
   display: block;
   width: 18px;
   height: 31.48px;
-  background: url("/wp/assets/source/images/arrow3.svg") no-repeat center / cover;
+  background: url("../images/arrow3.svg") no-repeat center / cover;
   position: absolute;
   top: 48px;
 }
@@ -1845,7 +1849,7 @@ body div#content .sub_container section.contents div.tab_contents#tab03 div.con0
   display: block;
   width: 18px;
   height: 31.48px;
-  background: url("/wp/assets/source/images/arrow3.svg") no-repeat center / cover;
+  background: url("../images/arrow3.svg") no-repeat center / cover;
   position: absolute;
   top: 48px;
 }
@@ -1964,7 +1968,7 @@ body div#content .sub_container section.operation_contents div.con01 ul li:first
   display: block;
   width: 24px;
   height: 25px;
-  background: url("/wp/assets/source/images/left.png") no-repeat center / cover;
+  background: url("../images/left.png") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con01 ul li:first-child::after {
   position: absolute;
@@ -1974,12 +1978,12 @@ body div#content .sub_container section.operation_contents div.con01 ul li:first
   display: block;
   width: 24px;
   height: 25px;
-  background: url("/wp/assets/source/images/right.png") no-repeat center / cover;
+  background: url("../images/right.png") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con01 ul li.image {
   width: 618px;
   height: 471px;
-  background: url("/wp/assets/source/images/coophn.png") no-repeat center / cover;
+  background: url("../images/coophn.png") no-repeat center / cover;
   font-size: 0;
   margin: 60px 0 0 180px;
 }
@@ -2053,17 +2057,17 @@ body div#content .sub_container section.operation_contents div.con03 dl dt.img01
   width: 71px;
   height: 66px;
   margin-left: 113px;
-  background: url("/wp/assets/source/images/value01.svg") no-repeat center / cover;
+  background: url("../images/value01.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dt.img02 {
   width: 84px;
   margin-left: 108px;
-  background: url("/wp/assets/source/images/value02.svg") no-repeat center / cover;
+  background: url("../images/value02.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dt.img03 {
   width: 71px;
   margin-left: 113px;
-  background: url("/wp/assets/source/images/value03.svg") no-repeat center / cover;
+  background: url("../images/value03.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dd {
   margin: 26px 0 0;
@@ -2181,12 +2185,12 @@ body div#content .sub_container section.operation_contents div.con05 div ul li s
 body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(1) p {
   width: 220px;
   height: 128px;
-  background: url("/wp/assets/source/images/img1.jpg") no-repeat center / cover;
+  background: url("../images/img1.jpg") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(2) p {
   width: 220px;
   height: 128px;
-  background: url("/wp/assets/source/images/img2.jpg") no-repeat center / cover;
+  background: url("../images/img2.jpg") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(3) {
   margin-right: 0;
@@ -2194,7 +2198,7 @@ body div#content .sub_container section.operation_contents div.con05 div ul li:n
 body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(3) p {
   width: 220px;
   height: 128px;
-  background: url("/wp/assets/source/images/img3.jpg") no-repeat center / cover;
+  background: url("../images/img3.jpg") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents ul.tabs {
   margin: 0;
@@ -2329,7 +2333,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab02 d
   display: block;
   width: 24px;
   height: 25px;
-  background: url("/wp/assets/source/images/left.png") no-repeat center / cover;
+  background: url("../images/left.png") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab02 div.con01 ul li:first-child::after {
   position: absolute;
@@ -2339,12 +2343,12 @@ body div#content .sub_container section.center_contents div.tab_contents#tab02 d
   display: block;
   width: 24px;
   height: 25px;
-  background: url("/wp/assets/source/images/right.png") no-repeat center / cover;
+  background: url("../images/right.png") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab02 div.con01 ul li.image {
   width: 680px;
   height: 371px;
-  background: url("/wp/assets/source/images/mission.png") no-repeat center / cover;
+  background: url("../images/mission.png") no-repeat center / cover;
   font-size: 0;
   margin: 40px 0 0 150px;
 }
@@ -2435,7 +2439,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab02 d
   list-style: none;
   margin-top: 14px;
   height: 230px;
-  background: url("/wp/assets/source/images/goal.png") no-repeat center / cover;
+  background: url("../images/goal.png") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab02 div.con04 ul li {
   position: absolute;
@@ -2607,7 +2611,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab03 d
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div {
   position: relative;
-  background: url("/wp/assets/source/images/organization.png") no-repeat center / 100% auto;
+  background: url("../images/organization.png") no-repeat center / 100% auto;
   width: 980px;
   height: 501px;
   margin-top: 30px;
@@ -2954,25 +2958,25 @@ body div#content .sub_container section.support_contents div.con01 ul li:nth-chi
   width: 56px;
   height: 72px;
   margin: 46px 0 0 55px;
-  background: url("/wp/assets/source/images/support01.svg") no-repeat center / cover;
+  background: url("../images/support01.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 ul li:nth-child(2) h3 {
   width: 69px;
   height: 62px;
   margin: 54px 0 0 50px;
-  background: url("/wp/assets/source/images/support02.svg") no-repeat center / cover;
+  background: url("../images/support02.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 ul li:nth-child(3) h3 {
   width: 71px;
   height: 70px;
   margin: 44px 0 0 48px;
-  background: url("/wp/assets/source/images/support03.svg") no-repeat center / cover;
+  background: url("../images/support03.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 ul li:nth-child(4) h3 {
   width: 58px;
   height: 62px;
   margin: 51px 0 0 53px;
-  background: url("/wp/assets/source/images/support04.svg") no-repeat center / cover;
+  background: url("../images/support04.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 ul li:nth-child(5) {
   border-right: none;
@@ -2981,12 +2985,12 @@ body div#content .sub_container section.support_contents div.con01 ul li:nth-chi
   width: 62px;
   height: 59px;
   margin: 54px 0 0 53px;
-  background: url("/wp/assets/source/images/support05.svg") no-repeat center / cover;
+  background: url("../images/support05.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 h5 {
   width: 980px;
   height: 51px;
-  background: url("/wp/assets/source/images/account.svg") no-repeat center / cover;
+  background: url("../images/account.svg") no-repeat center / cover;
   color: #fff;
   font-weight: 500;
   font-size: 17px;
