--- a/sources/css/style.less
+++ b/sources/css/style.less
@@ -36,8 +36,8 @@
 /* basic */
 @min-width: 320px;
 @myfont: "NanumSquare";
-// @img-url: "../images";
-@img-url: "/wp/assets/source/images";
+@img-url: "../images";
+// @img-url: "/wp/assets/source/images";
 @header-height: 100px;
 
 /* color */
@@ -1227,6 +1227,11 @@ body {
                             width: 100%;
                             height: 540px;
                             float: left;
+
+                            a {
+                                .block;
+                                padding: 0;
+                            }
                         }
                     }
 
