--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -1,5 +1,5 @@
-@import "/wp/assets/source/css/normalize.css";
-@import "/wp/assets/source/css/fontello.css";
+@import "normalize.css";
+@import "fontello.css";
 /* fonts */
 /* nanum square - regular */
 @font-face {
@@ -866,7 +866,7 @@ body div#content .container .main_wrap section.main_content ul.main_img li a {
   display: block;
   padding: 0;
 }
-body div#content .container .main_wrap section.main_content ul {
+body div#content .container .main_wrap section.main_content ul.main_banners {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -875,20 +875,20 @@ body div#content .container .main_wrap section.main_content ul {
   float: left;
   margin-left: 12px;
 }
-body div#content .container .main_wrap section.main_content ul::after {
+body div#content .container .main_wrap section.main_content ul.main_banners::after {
   content: "";
   clear: both;
   display: block;
 }
-body div#content .container .main_wrap section.main_content ul li {
+body div#content .container .main_wrap section.main_content ul.main_banners li {
   display: inline-block;
 }
-body div#content .container .main_wrap section.main_content ul li h5 {
+body div#content .container .main_wrap section.main_content ul.main_banners li h5 {
   color: #fff;
   font-size: 24px;
   font-weight: 600;
 }
-body div#content .container .main_wrap section.main_content ul li span {
+body div#content .container .main_wrap section.main_content ul.main_banners li span {
   color: #fff;
   display: block;
   font-weight: 400;
@@ -896,52 +896,52 @@ body div#content .container .main_wrap section.main_content ul li span {
   line-height: 24px;
   word-break: keep-all;
 }
-body div#content .container .main_wrap section.main_content ul li a {
+body div#content .container .main_wrap section.main_content ul.main_banners li a {
   display: inline-block;
   width: 100%;
   height: 100%;
   padding: 20px 0 0 20px;
 }
-body div#content .container .main_wrap section.main_content ul li.c1 {
+body div#content .container .main_wrap section.main_content ul.main_banners li.c1 {
   background: url("../images/content1.jpg") no-repeat center / cover;
   width: 374px;
   height: 264px;
   margin-bottom: 12px;
 }
-body div#content .container .main_wrap section.main_content ul li.c1 h5 {
+body div#content .container .main_wrap section.main_content ul.main_banners li.c1 h5 {
   margin-top: 55px;
 }
-body div#content .container .main_wrap section.main_content ul li.c1 span {
+body div#content .container .main_wrap section.main_content ul.main_banners li.c1 span {
   width: 250px;
   margin-top: 20px;
   line-height: 22px;
 }
-body div#content .container .main_wrap section.main_content ul li.c2 {
+body div#content .container .main_wrap section.main_content ul.main_banners li.c2 {
   background: url("../images/content2.jpg") no-repeat center / cover;
   width: 180px;
   height: 264px;
   margin-right: 12px;
   float: left;
 }
-body div#content .container .main_wrap section.main_content ul li.c2 h5 {
+body div#content .container .main_wrap section.main_content ul.main_banners li.c2 h5 {
   width: 100px;
   line-height: 28px;
   margin: 0;
 }
-body div#content .container .main_wrap section.main_content ul li.c2 h5 span {
+body div#content .container .main_wrap section.main_content ul.main_banners li.c2 h5 span {
   line-height: 22px;
   margin-bottom: 10px;
 }
-body div#content .container .main_wrap section.main_content ul li.c3 {
+body div#content .container .main_wrap section.main_content ul.main_banners li.c3 {
   background: url("../images/content3.jpg") no-repeat center / cover;
   width: 180px;
   height: 264px;
   float: left;
 }
-body div#content .container .main_wrap section.main_content ul li.c3 h5 {
+body div#content .container .main_wrap section.main_content ul.main_banners li.c3 h5 {
   margin: 0;
 }
-body div#content .container .main_wrap section.main_content ul li.c3 h5 span {
+body div#content .container .main_wrap section.main_content ul.main_banners li.c3 h5 span {
   margin-bottom: 5px;
 }
 body div#content .container .main_wrap section.notice_wrap {
