--- a/sources/css/style.less
+++ b/sources/css/style.less
@@ -1,12 +1,12 @@
 // out: ./style.css, compress: false, sourceMap: false
 
-@import "rem.less";
-@import "/wp/assets/source/css/normalize.css";
-@import "/wp/assets/source/css/fontello.css";
-
-// @import "normalize.css";
 // @import "rem.less";
-// @import "fontello.css";
+// @import "/wp/assets/source/css/normalize.css";
+// @import "/wp/assets/source/css/fontello.css";
+
+@import "normalize.css";
+@import "rem.less";
+@import "fontello.css";
 
 /* fonts */
 
@@ -1227,7 +1227,7 @@ body {
                             width: 100%;
                             height: 540px;
                             float: left;
-
+                            
                             a {
                                 .block;
                                 padding: 0;
@@ -1235,7 +1235,7 @@ body {
                         }
                     }
 
-                    ul {
+                    ul.main_banners {
                         .no-list;
                         .mapazero;
                         width: 374px;
@@ -1267,6 +1267,7 @@ body {
                                 word-break: keep-all;
                             }
 
+                            
                             a {
                                 .inline-block;
                                 width: 100%;
