--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -1,5 +1,5 @@
-@import "normalize.css";
-@import "fontello.css";
+@import "/wp/assets/source/css/normalize.css";
+@import "/wp/assets/source/css/fontello.css";
 /* fonts */
 /* nanum square - regular */
 @font-face {
@@ -256,7 +256,7 @@ body header#header .container {
 body header#header .container h1 {
   position: absolute;
   left: -19px;
-  background: url("../images/logo.svg") no-repeat center / auto 100%;
+  background: url("/wp/assets/source/images/logo.svg") no-repeat center / auto 100%;
   margin: 0;
   padding: 0;
   font-size: 0;
@@ -367,8 +367,11 @@ body header#header nav#main-menu ul.menu > li div ul {
   margin: 0;
   padding: 0;
   text-align: left;
-  line-height: 64px;
+  line-height: 62px;
   overflow: hidden;
+  background: #f6f6f6;
+  min-width: 700px;
+  margin-top: 2px;
 }
 body header#header nav#main-menu ul.menu > li div ul li {
   display: inline-block;
@@ -561,7 +564,7 @@ body div#content {
 }
 body div#content .container {
   width: 100%;
-  background: url("../images/bg.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/bg.jpg") no-repeat center / cover;
 }
 body div#content .container .main_wrap {
   width: 980px;
@@ -629,7 +632,7 @@ body div#content .container .main_wrap section.main_content ul.main_banners li a
   word-break: keep-all;
 }
 body div#content .container .main_wrap section.main_content ul.main_banners li.c1 {
-  background: url("../images/content1.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/content1.jpg") no-repeat center / cover;
   width: 374px;
   height: 264px;
   margin-bottom: 12px;
@@ -643,7 +646,7 @@ body div#content .container .main_wrap section.main_content ul.main_banners li.c
   line-height: 22px;
 }
 body div#content .container .main_wrap section.main_content ul.main_banners li.c2 {
-  background: url("../images/content2.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/content2.jpg") no-repeat center / cover;
   width: 180px;
   height: 264px;
   margin-right: 12px;
@@ -659,7 +662,7 @@ body div#content .container .main_wrap section.main_content ul.main_banners li.c
   margin-bottom: 10px;
 }
 body div#content .container .main_wrap section.main_content ul.main_banners li.c3 {
-  background: url("../images/content3.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/content3.jpg") no-repeat center / cover;
   width: 180px;
   height: 264px;
   float: left;
@@ -681,7 +684,7 @@ body div#content .container .main_wrap section.notice_wrap {
 }
 body div#content .container .main_wrap section.notice_wrap a.info {
   display: block;
-  background: url("../images/info.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/info.jpg") no-repeat center / cover;
   width: 227px;
   height: 212px;
   padding: 40px 0 0 26px;
@@ -780,7 +783,7 @@ body div#content .container .main_wrap section.notice_wrap ul.notice li.veiw div
   vertical-align: top;
   font-size: 0;
   margin: 2px 0 0 2px;
-  background: url("../images/new.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/new.png") no-repeat center / cover;
   width: 13px;
   height: 12px;
 }
@@ -956,19 +959,19 @@ body div#content .sub_container h2.sub_title.other {
 body div#content .sub_container h2.sub_title p {
   width: 980px;
   margin: 0 auto;
-  background: url("../images/sub01.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub01.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub02 {
-  background: url("../images/sub02.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub02.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub03 {
-  background: url("../images/sub03.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub03.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub04 {
-  background: url("../images/sub04.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub04.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub05 {
-  background: url("../images/sub05.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub05.jpg") no-repeat center / cover;
 }
 body div#content .sub_container div.hello {
   position: relative;
@@ -997,7 +1000,7 @@ body div#content .sub_container div.hello ul {
   width: 980px;
   height: 840px;
   margin: 0 auto 60px auto;
-  background: url("../images/hello.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/hello.jpg") no-repeat center / cover;
   padding: 50px;
 }
 body div#content .sub_container div.hello ul li {
@@ -1273,7 +1276,7 @@ body div#content .sub_container section.contents div.tab_contents div.con03 ul.c
   display: block;
   width: 18px;
   height: 31.48px;
-  background: url("../images/arrow3.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/arrow3.svg") no-repeat center / cover;
   position: absolute;
   top: 38px;
 }
@@ -1446,7 +1449,7 @@ body div#content .sub_container section.contents div.tab_contents#tab01 div.con0
   display: block;
   width: 24px;
   height: 41.97px;
-  background: url("../images/arrow2.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/arrow2.svg") no-repeat center / cover;
   position: absolute;
   top: 130px;
   left: -46px;
@@ -1494,7 +1497,7 @@ body div#content .sub_container section.contents div.tab_contents#tab02 div.con0
   display: block;
   width: 18px;
   height: 31.48px;
-  background: url("../images/arrow3.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/arrow3.svg") no-repeat center / cover;
   position: absolute;
   top: 48px;
 }
@@ -1569,7 +1572,7 @@ body div#content .sub_container section.contents div.tab_contents#tab03 div.con0
   display: block;
   width: 18px;
   height: 31.48px;
-  background: url("../images/arrow3.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/arrow3.svg") no-repeat center / cover;
   position: absolute;
   top: 48px;
 }
@@ -1660,7 +1663,7 @@ body div#content .sub_container section.operation_contents div.con01 h3 {
 }
 body div#content .sub_container section.operation_contents div.con01 p {
   font-size: 60px;
-  color: #E3DFDF;
+  color: #555;
   font-weight: 600;
   text-align: center;
   margin: 0 0 15px 0;
@@ -1688,7 +1691,7 @@ body div#content .sub_container section.operation_contents div.con01 ul li:first
   display: block;
   width: 24px;
   height: 25px;
-  background: url("../images/left.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/left.png") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con01 ul li:first-child::after {
   position: absolute;
@@ -1698,12 +1701,12 @@ body div#content .sub_container section.operation_contents div.con01 ul li:first
   display: block;
   width: 24px;
   height: 25px;
-  background: url("../images/right.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/right.png") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con01 ul li.image {
   width: 618px;
   height: 471px;
-  background: url("../images/coophn.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/coophn.png") no-repeat center / cover;
   font-size: 0;
   margin: 60px 0 0 180px;
 }
@@ -1769,25 +1772,33 @@ body div#content .sub_container section.operation_contents div.con03 dl:nth-of-t
   margin-right: 0;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dt {
-  font-size: 0;
   height: 67px;
   margin-top: 20px;
+  padding: 86px 0 0;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dt.img01 {
   width: 71px;
   height: 66px;
   margin-left: 113px;
-  background: url("../images/value01.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/value01.svg") no-repeat center top / 100% auto;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dt.img02 {
   width: 84px;
   margin-left: 108px;
-  background: url("../images/value02.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/value02.svg") no-repeat center top / 100% auto;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dt.img03 {
   width: 71px;
   margin-left: 113px;
-  background: url("../images/value03.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/value03.svg") no-repeat center top / 100% auto;
+}
+body div#content .sub_container section.operation_contents div.con03 dl dt span {
+  display: block;
+  font-weight: 800;
+  text-align: center;
+  margin: 5px;
+  color: #333;
+  font-size: 18px;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dd {
   margin: 26px 0 0;
@@ -1797,12 +1808,6 @@ body div#content .sub_container section.operation_contents div.con03 dl dd {
   white-space: normal;
   word-break: keep-all;
   color: #555;
-}
-body div#content .sub_container section.operation_contents div.con03 dl dd span {
-  display: block;
-  font-weight: 800;
-  margin-bottom: 5px;
-  color: #333;
 }
 body div#content .sub_container section.operation_contents div.con04 {
   width: 980px;
@@ -1902,23 +1907,29 @@ body div#content .sub_container section.operation_contents div.con05 div ul li s
   display: block;
   font-weight: 400;
 }
-body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(1) p {
+body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(1)::before {
+  content: "";
+  display: block;
   width: 220px;
   height: 128px;
-  background: url("../images/img1.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/img1.jpg") no-repeat center / cover;
 }
-body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(2) p {
+body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(2)::before {
+  content: "";
+  display: block;
   width: 220px;
   height: 128px;
-  background: url("../images/img2.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/img2.jpg") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(3) {
   margin-right: 0;
 }
-body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(3) p {
+body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(3)::before {
+  content: "";
+  display: block;
   width: 220px;
   height: 128px;
-  background: url("../images/img3.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/img3.jpg") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents ul.tabs {
   margin: 0;
@@ -2053,7 +2064,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab02 d
   display: block;
   width: 24px;
   height: 25px;
-  background: url("../images/left.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/left.png") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab02 div.con01 ul li:first-child::after {
   position: absolute;
@@ -2063,12 +2074,12 @@ body div#content .sub_container section.center_contents div.tab_contents#tab02 d
   display: block;
   width: 24px;
   height: 25px;
-  background: url("../images/right.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/right.png") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab02 div.con01 ul li.image {
   width: 680px;
   height: 371px;
-  background: url("../images/mission.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/mission.png") no-repeat center / cover;
   font-size: 0;
   margin: 40px 0 0 150px;
 }
@@ -2159,7 +2170,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab02 d
   list-style: none;
   margin-top: 14px;
   height: 230px;
-  background: url("../images/goal.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/goal.png") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab02 div.con04 ul li {
   position: absolute;
@@ -2331,7 +2342,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab03 d
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div {
   position: relative;
-  background: url("../images/organization.png") no-repeat center / 100% auto;
+  background: url("/wp/assets/source/images/organization.png") no-repeat center / 100% auto;
   width: 980px;
   height: 501px;
   margin-top: 30px;
@@ -2658,59 +2669,66 @@ body div#content .sub_container section.support_contents div.con01 ul li {
   border-right: 1px solid #ccc;
 }
 body div#content .sub_container section.support_contents div.con01 ul li h3 {
-  font-size: 0;
-}
-body div#content .sub_container section.support_contents div.con01 ul li p {
   font-size: 17px;
   color: 333;
   font-weight: 800;
   margin-bottom: 14px;
   margin-left: 0;
 }
-body div#content .sub_container section.support_contents div.con01 ul li span {
+body div#content .sub_container section.support_contents div.con01 ul li p {
   color: #555;
   font-size: 13px;
   line-height: 20px;
   white-space: normal;
   word-break: keep-all;
 }
-body div#content .sub_container section.support_contents div.con01 ul li:nth-child(1) h3 {
+body div#content .sub_container section.support_contents div.con01 ul li:nth-child(1)::before {
+  content: "";
+  display: block;
   width: 56px;
   height: 72px;
   margin: 46px 0 0 55px;
-  background: url("../images/support01.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support01.svg") no-repeat center / cover;
 }
-body div#content .sub_container section.support_contents div.con01 ul li:nth-child(2) h3 {
+body div#content .sub_container section.support_contents div.con01 ul li:nth-child(2)::before {
+  content: "";
+  display: block;
   width: 69px;
   height: 62px;
   margin: 54px 0 0 50px;
-  background: url("../images/support02.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support02.svg") no-repeat center / cover;
 }
-body div#content .sub_container section.support_contents div.con01 ul li:nth-child(3) h3 {
+body div#content .sub_container section.support_contents div.con01 ul li:nth-child(3)::before {
+  content: "";
+  display: block;
   width: 71px;
   height: 70px;
   margin: 44px 0 0 48px;
-  background: url("../images/support03.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support03.svg") no-repeat center / cover;
 }
-body div#content .sub_container section.support_contents div.con01 ul li:nth-child(4) h3 {
+body div#content .sub_container section.support_contents div.con01 ul li:nth-child(4)::before {
+  content: "";
+  display: block;
   width: 58px;
   height: 62px;
   margin: 51px 0 0 53px;
-  background: url("../images/support04.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support04.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 ul li:nth-child(5) {
   border-right: none;
 }
-body div#content .sub_container section.support_contents div.con01 ul li:nth-child(5) h3 {
+body div#content .sub_container section.support_contents div.con01 ul li:nth-child(5)::before {
+  content: "";
+  display: block;
   width: 62px;
   height: 59px;
   margin: 54px 0 0 53px;
-  background: url("../images/support05.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support05.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 h5 {
   width: 980px;
   height: 51px;
-  background: url("../images/account.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/account.svg") no-repeat center / cover;
   color: #fff;
   font-weight: 500;
   font-size: 17px;
