--- a/sources/css/style.less
+++ b/sources/css/style.less
@@ -1,12 +1,12 @@
 // out: ./style.css, compress: false, sourceMap: false
 
-// @import "rem.less";
-// @import "/wp/assets/source/css/normalize.css";
-// @import "/wp/assets/source/css/fontello.css";
-
-@import "normalize.css";
 @import "rem.less";
-@import "fontello.css";
+@import "/wp/assets/source/css/normalize.css";
+@import "/wp/assets/source/css/fontello.css";
+
+// @import "normalize.css";
+// @import "rem.less";
+// @import "fontello.css";
 
 /* fonts */
 
@@ -36,8 +36,8 @@
 /* basic */
 @min-width: 320px;
 @myfont: "NanumSquare";
-@img-url: "../images";
-// @img-url: "/wp/assets/source/images";
+// @img-url: "../images";
+@img-url: "/wp/assets/source/images";
 @header-height: 100px;
 
 /* color */
@@ -572,8 +572,11 @@ body {
                             .no-list;
                             .mapazero;
                             .left;
-                            line-height:64px;
+                            line-height:62px;
                             .hidden;
+                            background: #f6f6f6;
+                            min-width: 700px;
+                            margin-top:2px;
 
 
                             li {
@@ -1292,9 +1295,6 @@ body {
                         &.active {
                             z-index:300;
 
-                            ul {
-
-                            }
                         }
 
                         &#tab01 {
@@ -2280,7 +2280,7 @@ body {
 
                     p {
                         font-size: 60px;
-                        color: #E3DFDF;
+                        color: #555;
                         font-weight: 600;
                         .center;
                         margin: 0 0 15px 0;
@@ -2396,27 +2396,37 @@ body {
                         }
 
                         dt {
-                            .zero;
                             height: 67px;
                             margin-top: 20px;
+                            padding:86px 0 0;
 
                             &.img01 {
                                 width: 71px;
                                 height: 66px;
                                 margin-left: 113px;
-                                background: url("@{img-url}/value01.svg") no-repeat center / cover;
+                                background: url("@{img-url}/value01.svg") no-repeat center top / 100% auto;
                             }
 
                             &.img02 {
                                 width: 84px;
                                 margin-left: 108px;
-                                background: url("@{img-url}/value02.svg") no-repeat center / cover;
+                                background: url("@{img-url}/value02.svg") no-repeat center top / 100% auto;
                             }
 
                             &.img03 {
                                 width: 71px;
                                 margin-left: 113px;
-                                background: url("@{img-url}/value03.svg") no-repeat center / cover;
+                                background: url("@{img-url}/value03.svg") no-repeat center top / 100% auto;
+                            }
+
+                            span {
+                                .block;
+                                .bold;
+                                .center;
+                                margin:  5px;
+                                color: #333;
+                                font-size:18px;
+                                
                             }
                         }
 
@@ -2428,13 +2438,6 @@ body {
                             white-space: normal;
                             word-break: keep-all;
                             color: #555;
-
-                            span {
-                                .block;
-                                .bold;
-                                margin-bottom: 5px;
-                                color: #333;
-                            }
                         }
                     }
                 }
@@ -2544,7 +2547,9 @@ body {
 
                                 &:nth-child(1) {
 
-                                    p {
+                                    &::before {
+                                        content:"";
+                                        .block;
                                         width: 220px;
                                         height: 128px;
                                         background: url("@{img-url}/img1.jpg") no-repeat center / cover;
@@ -2553,7 +2558,9 @@ body {
 
                                 &:nth-child(2) {
 
-                                    p {
+                                    &::before {
+                                        content:"";
+                                        .block;
                                         width: 220px;
                                         height: 128px;
                                         background: url("@{img-url}/img2.jpg") no-repeat center / cover;
@@ -2563,7 +2570,9 @@ body {
                                 &:nth-child(3) {
                                     margin-right: 0;
 
-                                    p {
+                                    &::before {
+                                        content:"";
+                                        .block;
                                         width: 220px;
                                         height: 128px;
                                         background: url("@{img-url}/img3.jpg") no-repeat center / cover;
@@ -3458,10 +3467,6 @@ body {
                             border-right: 1px solid #ccc;
 
                             h3 {
-                                .zero;
-                            }
-
-                            p {
                                 font-size: 17px;
                                 color: 333;
                                 .bold;
@@ -3469,7 +3474,7 @@ body {
                                 margin-left: 0;
                             }
 
-                            span {
+                            p {
                                 color: #555;
                                 font-size: 13px;
                                 line-height: 20px;
@@ -3479,7 +3484,9 @@ body {
 
                             &:nth-child(1) {
 
-                                h3 {
+                                &::before {
+                                    content:"";
+                                    .block;
                                     width: 56px;
                                     height: 72px;
                                     margin: 46px 0 0 55px;
@@ -3489,7 +3496,9 @@ body {
 
                             &:nth-child(2) {
 
-                                h3 {
+                                &::before {
+                                    content:"";
+                                    .block;
                                     width: 69px;
                                     height: 62px;
                                     margin: 54px 0 0 50px;
@@ -3499,7 +3508,9 @@ body {
 
                             &:nth-child(3) {
 
-                                h3 {
+                                &::before {
+                                    content:"";
+                                    .block;
                                     width: 71px;
                                     height: 70px;
                                     margin: 44px 0 0 48px;
@@ -3509,7 +3520,9 @@ body {
 
                             &:nth-child(4) {
 
-                                h3 {
+                                &::before {
+                                    content:"";
+                                    .block;
                                     width: 58px;
                                     height: 62px;
                                     margin: 51px 0 0 53px;
@@ -3520,7 +3533,9 @@ body {
                             &:nth-child(5) {
                                 border-right: none;
 
-                                h3 {
+                                &::before {
+                                    content:"";
+                                    .block;
                                     width: 62px;
                                     height: 59px;
                                     margin: 54px 0 0 53px;
