--- a/sources/css/style.less
+++ b/sources/css/style.less
@@ -938,7 +938,8 @@ body {
                                 margin-bottom: 12px;
 
                                 h5 {
-                                    margin-top: 55px;
+                                    margin-top: 25px;
+                                    color:#51200a;
                                 }
 
                                 span {
@@ -959,6 +960,7 @@ body {
                                     width: 100px;
                                     line-height: 28px;
                                     margin: 0;
+                                    color:#51200a;
 
                                     span {
                                         line-height: 22px;
@@ -975,6 +977,7 @@ body {
 
                                 h5 {
                                     margin: 0;
+                                    color:#0d4d41;
 
                                     span {
                                         margin-bottom: 5px;
