--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -321,6 +321,9 @@ body header#header nav#main-menu ul.menu > li h2 a:hover a {
   font-weight: 600;
   color: #EA609E;
 }
+body header#header nav#main-menu ul.menu > li h2 a:focus {
+  border: 1px dotted #000;
+}
 body header#header nav#main-menu ul.menu > li:nth-child(1) h2 {
   margin-left: 0;
 }
@@ -414,7 +417,7 @@ body header#header nav#main-menu ul.all-menu {
   padding: 0;
   list-style: none;
   text-align: center;
-  background: #fff;
+  background: #efefef;
 }
 body header#header nav#main-menu ul.all-menu > li {
   display: inline-block;
@@ -514,6 +517,9 @@ body header#header div.util-menu a.on i::before {
   -ms-transition: all 0.4s ease;
   transition: all 0.4s ease;
 }
+body header#header div.util-menu a.hide {
+  display: none;
+}
 body.gnb_sub header#header nav#main-menu::before {
   z-index: 400;
   content: "";
@@ -550,13 +556,17 @@ body button.menuClose.show {
   display: inline-block;
   position: absolute;
   font-size: 0;
-  left: 0;
-  right: 0;
-  top: 100px;
-  width: 100%;
+  color: #fff;
+  left: 50%;
+  top: 40px;
+  margin-left: 445px;
+  padding: 5px 5px;
   z-index: 999;
   border: none;
-  background: rgba(0, 0, 0, 0.6);
+  background: #000;
+}
+body button.menuClose.show i {
+  font-size: 24px;
 }
 body div#content {
   /* material */
@@ -645,6 +655,7 @@ body div#content .container .main_wrap section.main_content ul.main_banners li.c
   width: 250px;
   margin-top: 20px;
   line-height: 22px;
+  color: #51200a;
 }
 body div#content .container .main_wrap section.main_content ul.main_banners li.c2 {
   background: url("/wp/assets/source/images/content2.jpg") no-repeat center / cover;
@@ -657,11 +668,12 @@ body div#content .container .main_wrap section.main_content ul.main_banners li.c
   width: 100px;
   line-height: 28px;
   margin: 0;
-  color: #51200a;
+  color: #3B261D;
 }
 body div#content .container .main_wrap section.main_content ul.main_banners li.c2 h5 span {
   line-height: 22px;
   margin-bottom: 10px;
+  color: #3B261D;
 }
 body div#content .container .main_wrap section.main_content ul.main_banners li.c3 {
   background: url("/wp/assets/source/images/content3.jpg") no-repeat center / cover;
@@ -675,6 +687,7 @@ body div#content .container .main_wrap section.main_content ul.main_banners li.c
 }
 body div#content .container .main_wrap section.main_content ul.main_banners li.c3 h5 span {
   margin-bottom: 5px;
+  color: #0d4d41;
 }
 body div#content .container .main_wrap section.notice_wrap {
   margin-top: 12px;
@@ -734,7 +747,11 @@ body div#content .container .main_wrap section.notice_wrap ul.notice li.veiw h3 
 }
 body div#content .container .main_wrap section.notice_wrap ul.notice li.veiw h3 a {
   display: inline-block;
+  font-size: 0;
   color: #555;
+}
+body div#content .container .main_wrap section.notice_wrap ul.notice li.veiw h3 a i {
+  font-size: 16px;
 }
 body div#content .container .main_wrap section.notice_wrap ul.notice li.veiw button.btn {
   border: 1px solid #ccc;
@@ -858,6 +875,7 @@ body div#content div.material .material_wrap div.tab-list div.tab-content a.more
   display: block;
   position: absolute;
   top: 60px;
+  font-size: 0;
   right: 2px;
   width: 52px;
   height: 52px;
@@ -878,11 +896,13 @@ body div#content div.material .material_wrap div.tab-list div.tab-content a.more
 }
 body div#content div.material .material_wrap div.tab-list div.tab-content ul {
   position: absolute;
-  right: 0;
+  left: 132px;
   top: 0;
   list-style: none;
   margin: 0;
   padding: 0;
+  min-width: 848px;
+  background: #E5E5E5;
 }
 body div#content div.material .material_wrap div.tab-list div.tab-content ul li {
   float: left;
@@ -1048,7 +1068,7 @@ body div#content .sub_container div.guide p {
   white-space: nowrap;
 }
 body div#content .sub_container div.guide p span {
-  color: #FF3E3E;
+  color: #EE0701;
 }
 body div#content .sub_container div.guide p.small {
   font-size: 14px;
@@ -1108,6 +1128,11 @@ body div#content .sub_container section.contents div.tab_contents {
 }
 body div#content .sub_container section.contents div.tab_contents.active {
   display: block;
+}
+body div#content .sub_container section.contents div.tab_contents h4 {
+  font-size: 24px;
+  color: #333;
+  margin: 25px 0 0;
 }
 body div#content .sub_container section.contents div.tab_contents h5 {
   position: relative;
@@ -1171,6 +1196,9 @@ body div#content .sub_container section.contents div.tab_contents div.con02 li t
   border-collapse: collapse;
   font-size: 17px;
   margin: 0 0 30px;
+}
+body div#content .sub_container section.contents div.tab_contents div.con02 li table.program caption {
+  font-size: 0;
 }
 body div#content .sub_container section.contents div.tab_contents div.con02 li table.program tbody th {
   padding: 10px 4px;
@@ -1983,6 +2011,11 @@ body div#content .sub_container section.center_contents div.tab_contents {
 body div#content .sub_container section.center_contents div.tab_contents.active {
   display: block;
 }
+body div#content .sub_container section.center_contents div.tab_contents h4 {
+  font-size: 24px;
+  color: #333;
+  margin: 25px 0 0;
+}
 body div#content .sub_container section.center_contents div.tab_contents h5 {
   position: relative;
   font-size: 18px;
@@ -2355,7 +2388,11 @@ body div#content .sub_container section.center_contents div.tab_contents#tab03 d
   padding: 0;
   list-style: none;
 }
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team li {
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team > li {
+  width: 980px;
+  height: 501px;
+}
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team > li a {
   position: absolute;
   width: 246px;
   height: 70px;
@@ -2363,42 +2400,24 @@ body div#content .sub_container section.center_contents div.tab_contents#tab03 d
   text-align: center;
   border-radius: 10px;
   font-size: 18px;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team li a {
   display: block;
   color: #555;
 }
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team li:nth-child(1) {
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team > li:nth-child(1) > a {
   top: 0;
   left: 50%;
   margin-left: -123px;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team li:nth-child(1) a {
   color: #fff;
 }
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team li:nth-child(2) {
-  top: 116px;
-  right: 0;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team li:nth-child(3) {
-  bottom: 94px;
-  left: 0;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team li:nth-child(4) {
-  bottom: 94px;
-  left: 50%;
-  margin-left: -123px;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team li:nth-child(5) {
-  bottom: 94px;
-  right: 0;
-}
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.work {
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team > li ul {
   margin: 0;
   padding: 0;
   list-style: none;
+  width: 980px;
+  height: 501px;
 }
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.work li {
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team > li ul li {
+  display: block;
   position: absolute;
   width: 246px;
   height: 70px;
@@ -2406,24 +2425,44 @@ body div#content .sub_container section.center_contents div.tab_contents#tab03 d
   text-align: center;
   border-radius: 10px;
   font-size: 18px;
-  color: #555;
 }
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.work li:nth-child(1) {
-  bottom: 0;
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team > li ul li a {
+  color: #333;
+}
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team > li ul li span {
+  display: block;
+  width: 246px;
+  height: 70px;
+  line-height: 72px;
+  text-align: center;
+  border-radius: 10px;
+  font-size: 18px;
+  color: #555;
+  margin-top: 92px;
+}
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team > li ul li:nth-child(1) {
+  top: 116px;
+  right: 0;
+}
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team > li ul li:nth-child(2) {
+  bottom: 94px;
   left: 0;
 }
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.work li:nth-child(2) {
-  bottom: 0;
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team > li ul li:nth-child(2) span {
+  left: 0;
+  bottom: 24px;
+}
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team > li ul li:nth-child(3) {
+  bottom: 94px;
   left: 50%;
   margin-left: -123px;
 }
-body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.work li:nth-child(3) {
-  bottom: 0;
+body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div ul.team > li ul li:nth-child(4) {
+  bottom: 94px;
   right: 0;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab04 {
   position: relative;
-  margin-top: 60px;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab04::after {
   content: "";
@@ -2435,8 +2474,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab04 h
   font-size: 50px;
   color: #EA609E;
   font-weight: 800;
-  margin: 0;
-  padding: 0;
+  margin: 60px 0 0;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab04 h5::after {
   content: "";
@@ -2447,7 +2485,8 @@ body div#content .sub_container section.center_contents div.tab_contents#tab04 h
   border-radius: 50%;
   position: absolute;
   top: 22px;
-  left: 180px;
+  left: 179px;
+  z-index: 100;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab04 dl {
   float: left;
@@ -2462,7 +2501,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab04 d
   height: 650px;
   background: #D5D4D4;
   position: absolute;
-  top: 50px;
+  top: 110px;
   left: 184px;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab04 dl dt {
@@ -2893,15 +2932,14 @@ body div#content .sub_container article.board-search .bbs_container fieldset sel
   width: 35%;
 }
 body div#content .sub_container article.board-search .bbs_container fieldset input {
-  width: 50%;
+  width: 45%;
 }
 body div#content .sub_container article.board-search .bbs_container fieldset button {
-  width: 15%;
-  font-size: 0;
-  text-align: right;
+  width: 20%;
+  border-left: 1px solid #c5c5c5;
 }
 body div#content .sub_container article.board-search .bbs_container fieldset button i {
-  font-size: 1.42857143rem;
+  display: none;
 }
 body div#content .sub_container article.board-btn {
   text-align: center;
