--- a/sources/css/style.less
+++ b/sources/css/style.less
@@ -4214,6 +4214,10 @@ body {
 
                             padding:20px;
 
+                            img {
+                                max-width:100%;
+                            }
+
                         p {
                             .rem(margin, 0 0 4);
 
