--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -1,4 +1,5 @@
-@import "normalize.css";
+@import "/wp/assets/source/css/normalize.css";
+@import "/wp/assets/source/css/fontello.css";
 /* fonts */
 /* nanum square - regular */
 @font-face {
@@ -247,7 +248,7 @@ body header#header .container {
 body header#header .container h1 {
   position: absolute;
   left: -19px;
-  background: url("../images/logo.svg") no-repeat center / auto 100%;
+  background: url("/wp/assets/source/images/logo.svg") no-repeat center / auto 100%;
   margin: 0;
   padding: 0;
   font-size: 0;
@@ -531,6 +532,10 @@ body div#content section.main_issue .bx-wrapper ul.main_img {
   margin: 0;
   padding: 0;
 }
+body div#content section.main_issue .bx-wrapper ul.main_img li a img {
+  width: 1200px;
+  height: 470px;
+}
 body div#content section.main_issue .bx-wrapper .bx-controls {
   width: 300px;
   left: 50%;
@@ -580,7 +585,7 @@ body div#content section.main_slogan h2 {
   font-size: 0;
   width: 635px;
   height: 110px;
-  background: url('../images/slogan.svg') no-repeat center / 100% auto;
+  background: url('/wp/assets/source/images/slogan.svg') no-repeat center / 100% auto;
 }
 body div#content section.main_news div.container {
   font-size: 0;
@@ -826,7 +831,7 @@ body div#content .sub_container h2.sub_title p {
   text-align: center;
   font-size: 34px;
   line-height: 196px;
-  background: url("../images/sub01.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub01.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p:after {
   content: "";
@@ -839,16 +844,16 @@ body div#content .sub_container h2.sub_title p:after {
   bottom: 64px;
 }
 body div#content .sub_container h2.sub_title p.sub02 {
-  background: url("../images/sub02.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub02.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub03 {
-  background: url("../images/sub03.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub03.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub04 {
-  background: url("../images/sub04.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub04.jpg") no-repeat center / cover;
 }
 body div#content .sub_container h2.sub_title p.sub05 {
-  background: url("../images/sub05.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/sub05.jpg") no-repeat center / cover;
 }
 body div#content .sub_container aside {
   vertical-align: top;
@@ -969,7 +974,7 @@ body div#content .sub_container div.hello ul {
   width: 980px;
   height: 840px;
   margin: 0 auto 60px auto;
-  background: url("../images/hello.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/hello.jpg") no-repeat center / cover;
   padding: 50px;
 }
 body div#content .sub_container div.hello ul li {
@@ -1253,7 +1258,7 @@ body div#content .sub_container section.contents div.tab_contents div.con03 ul.c
   display: block;
   width: 18px;
   height: 31.48px;
-  background: url("../images/arrow3.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/arrow3.svg") no-repeat center / cover;
   position: absolute;
   top: 38px;
 }
@@ -1426,7 +1431,7 @@ body div#content .sub_container section.contents div.tab_contents#tab01 div.con0
   display: block;
   width: 24px;
   height: 41.97px;
-  background: url("../images/arrow2.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/arrow2.svg") no-repeat center / cover;
   position: absolute;
   top: 130px;
   left: -46px;
@@ -1474,7 +1479,7 @@ body div#content .sub_container section.contents div.tab_contents#tab02 div.con0
   display: block;
   width: 18px;
   height: 31.48px;
-  background: url("../images/arrow3.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/arrow3.svg") no-repeat center / cover;
   position: absolute;
   top: 48px;
 }
@@ -1549,7 +1554,7 @@ body div#content .sub_container section.contents div.tab_contents#tab03 div.con0
   display: block;
   width: 18px;
   height: 31.48px;
-  background: url("../images/arrow3.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/arrow3.svg") no-repeat center / cover;
   position: absolute;
   top: 48px;
 }
@@ -1668,7 +1673,7 @@ body div#content .sub_container section.operation_contents div.con01 ul li:first
   display: block;
   width: 24px;
   height: 25px;
-  background: url("../images/left.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/left.png") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con01 ul li:first-child::after {
   position: absolute;
@@ -1678,12 +1683,12 @@ body div#content .sub_container section.operation_contents div.con01 ul li:first
   display: block;
   width: 24px;
   height: 25px;
-  background: url("../images/right.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/right.png") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con01 ul li.image {
   width: 618px;
   height: 471px;
-  background: url("../images/coophn.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/coophn.png") no-repeat center / cover;
   font-size: 0;
   margin: 60px 0 0 180px;
 }
@@ -1757,17 +1762,17 @@ body div#content .sub_container section.operation_contents div.con03 dl dt.img01
   width: 71px;
   height: 66px;
   margin-left: 113px;
-  background: url("../images/value01.svg") no-repeat center top / 100% auto;
+  background: url("/wp/assets/source/images/value01.svg") no-repeat center top / 100% auto;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dt.img02 {
   width: 84px;
   margin-left: 108px;
-  background: url("../images/value02.svg") no-repeat center top / 100% auto;
+  background: url("/wp/assets/source/images/value02.svg") no-repeat center top / 100% auto;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dt.img03 {
   width: 71px;
   margin-left: 113px;
-  background: url("../images/value03.svg") no-repeat center top / 100% auto;
+  background: url("/wp/assets/source/images/value03.svg") no-repeat center top / 100% auto;
 }
 body div#content .sub_container section.operation_contents div.con03 dl dt span {
   display: block;
@@ -1889,14 +1894,14 @@ body div#content .sub_container section.operation_contents div.con05 div ul li:n
   display: block;
   width: 220px;
   height: 128px;
-  background: url("../images/img1.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/img1.jpg") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(2)::before {
   content: "";
   display: block;
   width: 220px;
   height: 128px;
-  background: url("../images/img2.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/img2.jpg") no-repeat center / cover;
 }
 body div#content .sub_container section.operation_contents div.con05 div ul li:nth-child(3) {
   margin-right: 0;
@@ -1906,7 +1911,7 @@ body div#content .sub_container section.operation_contents div.con05 div ul li:n
   display: block;
   width: 220px;
   height: 128px;
-  background: url("../images/img3.jpg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/img3.jpg") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents ul.tabs {
   margin: 0;
@@ -2046,7 +2051,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab02 d
   display: block;
   width: 24px;
   height: 25px;
-  background: url("../images/left.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/left.png") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab02 div.con01 ul li:first-child::after {
   position: absolute;
@@ -2056,12 +2061,12 @@ body div#content .sub_container section.center_contents div.tab_contents#tab02 d
   display: block;
   width: 24px;
   height: 25px;
-  background: url("../images/right.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/right.png") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab02 div.con01 ul li.image {
   width: 680px;
   height: 371px;
-  background: url("../images/mission.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/mission.png") no-repeat center / cover;
   font-size: 0;
   margin: 40px 0 0 150px;
 }
@@ -2152,7 +2157,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab02 d
   list-style: none;
   margin-top: 14px;
   height: 230px;
-  background: url("../images/goal.png") no-repeat center / cover;
+  background: url("/wp/assets/source/images/goal.png") no-repeat center / cover;
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab02 div.con04 ul li {
   position: absolute;
@@ -2324,7 +2329,7 @@ body div#content .sub_container section.center_contents div.tab_contents#tab03 d
 }
 body div#content .sub_container section.center_contents div.tab_contents#tab03 div.con02 div {
   position: relative;
-  background: url("../images/organization.png") no-repeat center / 100% auto;
+  background: url("/wp/assets/source/images/organization.png") no-repeat center / 100% auto;
   width: 980px;
   height: 501px;
   margin-top: 30px;
@@ -2676,7 +2681,7 @@ body div#content .sub_container section.support_contents div.con01 ul li:nth-chi
   width: 56px;
   height: 72px;
   margin: 46px 0 0 55px;
-  background: url("../images/support01.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support01.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 ul li:nth-child(2)::before {
   content: "";
@@ -2684,7 +2689,7 @@ body div#content .sub_container section.support_contents div.con01 ul li:nth-chi
   width: 69px;
   height: 62px;
   margin: 54px 0 0 50px;
-  background: url("../images/support02.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support02.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 ul li:nth-child(3)::before {
   content: "";
@@ -2692,7 +2697,7 @@ body div#content .sub_container section.support_contents div.con01 ul li:nth-chi
   width: 71px;
   height: 70px;
   margin: 44px 0 0 48px;
-  background: url("../images/support03.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support03.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 ul li:nth-child(4)::before {
   content: "";
@@ -2700,7 +2705,7 @@ body div#content .sub_container section.support_contents div.con01 ul li:nth-chi
   width: 58px;
   height: 62px;
   margin: 51px 0 0 53px;
-  background: url("../images/support04.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support04.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 ul li:nth-child(5) {
   border-right: none;
@@ -2711,12 +2716,12 @@ body div#content .sub_container section.support_contents div.con01 ul li:nth-chi
   width: 62px;
   height: 59px;
   margin: 54px 0 0 53px;
-  background: url("../images/support05.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/support05.svg") no-repeat center / cover;
 }
 body div#content .sub_container section.support_contents div.con01 h5 {
   width: 980px;
   height: 51px;
-  background: url("../images/account.svg") no-repeat center / cover;
+  background: url("/wp/assets/source/images/account.svg") no-repeat center / cover;
   color: #fff;
   font-weight: 500;
   font-size: 17px;
