--- a/sources/css/style.less
+++ b/sources/css/style.less
@@ -4408,14 +4408,17 @@ body {
                             
 
                             a {
-                                .block;
-                                .center;
+                                display:flex;
+                                align-items:center;
+                                padding-right: 184px;
+                                word-break: keep-all;
+                                .left;
+                                line-height:1.6;
 
                                     .absolute;
                                     .full-position;
                                     .left;
                                     padding-left:240px;
-                                    line-height:200px;
 
 
                                 p.img {
@@ -4463,7 +4466,6 @@ body {
 
                                         .absolute;
                                         right:0;
-                                        top:0;
                                         .mapazero;
 
                                     strong {
